Add tool to obfuscate the initial password.