@@ -1,16 +1,63 @@
 #!/bin/sh
-DEBUG_MODE="n" # Default is no debug mode
 
-#echo "Do you want to start in debug mode: [y]n"
-#read DEBUG_MODE
+# resolve links - $0 may be a softlink
+PRG="$0"
 
-if [ "$DEBUG_MODE" == "n" ]; then
-	# start in normal mode
-    java -Xmx1024m -jar bin/felix.jar
-else
-	# start in debug mode
-    java -Djava.compiler=NONE -Xnoagent -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Xmx1024m -jar bin/felix.jar
+while [ -h "$PRG" ]; do
+  ls=`ls -ld "$PRG"`
+  link=`expr "$ls" : '.*-> \(.*\)$'`
+  if expr "$link" : '/.*' > /dev/null; then
+    PRG="$link"
+  else
+    PRG=`dirname "$PRG"`/"$link"
+  fi
+done
+
+# Get standard environment variables
+PRGDIR=`dirname "$PRG"`
+
+# Only set OPENIDM_HOME if not already set
+[ -z "$OPENIDM_HOME" ] && OPENIDM_HOME=`cd "$PRGDIR" >/dev/null; pwd`
+
+# Only set OPENIDM_OPTS if not already set
+[ -z "$OPENIDM_OPTS" ] && OPENIDM_OPTS=-Xmx1024m
+
+# Set JDK Logger config file if it is present and an override has not been issued
+if [ -z "$LOGGING_CONFIG" ]; then
+  if [ -r "$OPENIDM_HOME"/conf/logging.properties ]; then
+    LOGGING_CONFIG="-Djava.util.logging.config.file=$OPENIDM_HOME/conf/logging.properties"
+  else
+    LOGGING_CONFIG="-Dnop"
+  fi
 fi
 
+if [ "$1" = "jpda" ] ; then
+  if [ -z "$JPDA_TRANSPORT" ]; then
+    JPDA_TRANSPORT="dt_socket"
+  fi
+  if [ -z "$JPDA_ADDRESS" ]; then
+    JPDA_ADDRESS="5005"
+  fi
+  if [ -z "$JPDA_SUSPEND" ]; then
+    JPDA_SUSPEND="n"
+  fi
+  if [ -z "$JPDA_OPTS" ]; then
+    JPDA_OPTS="-Djava.compiler=NONE -Xnoagent -Xdebug -Xrunjdwp:transport=$JPDA_TRANSPORT,address=$JPDA_ADDRESS,server=y,suspend=$JPDA_SUSPEND"
+  fi
+  OPENIDM_OPTS="$OPENIDM_OPTS $JPDA_OPTS"
+  shift
+fi
 
+CLASSPATH="$CLASSPATH""$OPENIDM_HOME"/bin/felix.jar
 
+echo "Using OPENIDM_HOME:   $OPENIDM_HOME"
+echo "Using OPENIDM_OPTS:   $OPENIDM_OPTS"
+echo "Using LOGGING_CONFIG: $LOGGING_CONFIG"
+
+# start in normal mode
+java "$LOGGING_CONFIG" $JAVA_OPTS $OPENIDM_OPTS \
+	-Djava.endorsed.dirs="$JAVA_ENDORSED_DIRS" \
+	-classpath "$CLASSPATH" \
+	-Dopenidm.system.server.root="$OPENIDM_HOME" \
+	-Dignore.openidm.system.server.environment="dev|test|qa|prod" \
+	org.apache.felix.main.Main "$@"
